refactor: service name, docker build stuff
